Fix pointer issue on mobile contact page

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -101,11 +101,13 @@
 
 .mobile-signup {
 	height: 100vh !important;
+	pointer-events: none;
 	transition: background-color .5s ease-out;
 	width: 100vw !important;
 
 	&.bg-black {
 		background: rgba(0,0,0,.9) !important;
+		pointer-events: initial;
 		transition: background-color .5s ease-out;
 
 		@include tablet {
@@ -116,6 +118,10 @@
 	@include tablet {
 		height: auto !important;
 		width: 60% !important;
+	}
+
+	.sign-up-cta {
+		pointer-events: initial !important;
 	}
 
 	.sign-up-inner {
